--- a/index.html
+++ b/index.html
@@ -1,15 +1,71 @@
-cat > index.html <<'EOF'
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Anderson Liu</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Anderson Liu</title>
+
+<style>
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    background: #0f172a;
+    color: #e2e8f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+}
+
+.container {
+    max-width: 700px;
+}
+
+h1 {
+    font-size: 3rem;
+    margin-bottom: 0.5rem;
+}
+
+.subtitle {
+    font-size: 1.2rem;
+    color: #94a3b8;
+    margin-bottom: 2rem;
+}
+
+.links a {
+    display: inline-block;
+    margin: 0 15px;
+    padding: 10px 18px;
+    text-decoration: none;
+    border: 1px solid #334155;
+    border-radius: 6px;
+    color: #e2e8f0;
+    transition: all 0.2s ease;
+}
+
+.links a:hover {
+    background: #1e293b;
+    border-color: #38bdf8;
+}
+</style>
 </head>
+
 <body>
-  <h1>Anderson Liu</h1>
-  <p>Optics & Photonics → Quantitative Finance</p>
-  <p><a href="https://github.com/anderson930420/bs_pricer">bs_pricer</a></p>
+<div class="container">
+    <h1>Anderson Liu</h1>
+    <div class="subtitle">
+        Optics & Photonics → Quantitative Finance
+    </div>
+
+    <div class="links">
+        <a href="https://github.com/anderson930420/bs_pricer" target="_blank">
+            Black-Scholes Engine
+        </a>
+        <a href="https://github.com/anderson930420" target="_blank">
+            GitHub
+        </a>
+    </div>
+</div>
 </body>
 </html>
-EOF
