Build quant portfolio landing page

--- a/index.html
+++ b/index.html
@@ -1,71 +1,357 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Anderson Liu</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Anderson Liu | Quant Portfolio</title>
+  <meta name="description" content="Quant portfolio: pricing, risk, and research engineering." />
 
-<style>
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-    background: #0f172a;
-    color: #e2e8f0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    text-align: center;
-}
+  <style>
+    :root{
+      --bg:#0b1020;
+      --panel:#0f172a;
+      --muted:#94a3b8;
+      --text:#e2e8f0;
+      --line:#1f2a44;
+      --chip:#121b33;
+      --link:#7dd3fc;
+      --shadow: 0 12px 30px rgba(0,0,0,.35);
+      --radius: 14px;
+    }
 
-.container {
-    max-width: 700px;
-}
+    *{ box-sizing:border-box; }
+    body{
+      margin:0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Arial, sans-serif;
+      background:
+        radial-gradient(1100px 700px at 20% 0%, rgba(56,189,248,.12), transparent 55%),
+        radial-gradient(900px 600px at 80% 20%, rgba(34,197,94,.10), transparent 55%),
+        radial-gradient(700px 500px at 55% 90%, rgba(99,102,241,.12), transparent 55%),
+        var(--bg);
+      color:var(--text);
+      line-height:1.55;
+    }
 
-h1 {
-    font-size: 3rem;
-    margin-bottom: 0.5rem;
-}
+    a{ color:var(--link); text-decoration:none; }
+    a:hover{ text-decoration:underline; }
 
-.subtitle {
-    font-size: 1.2rem;
-    color: #94a3b8;
-    margin-bottom: 2rem;
-}
+    .wrap{
+      max-width: 980px;
+      margin: 0 auto;
+      padding: 42px 18px 60px;
+    }
 
-.links a {
-    display: inline-block;
-    margin: 0 15px;
-    padding: 10px 18px;
-    text-decoration: none;
-    border: 1px solid #334155;
-    border-radius: 6px;
-    color: #e2e8f0;
-    transition: all 0.2s ease;
-}
+    .topbar{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:12px;
+      margin-bottom: 26px;
+    }
 
-.links a:hover {
-    background: #1e293b;
-    border-color: #38bdf8;
-}
-</style>
+    .brand{
+      display:flex;
+      flex-direction:column;
+      gap:4px;
+    }
+    .brand .name{
+      font-size: 34px;
+      letter-spacing: .2px;
+      font-weight: 750;
+    }
+    .brand .tag{
+      color:var(--muted);
+      font-size: 14px;
+    }
+
+    .nav{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      justify-content:flex-end;
+    }
+    .btn{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      border:1px solid var(--line);
+      background: rgba(15,23,42,.65);
+      padding: 10px 12px;
+      border-radius: 10px;
+      color:var(--text);
+      text-decoration:none;
+      transition: transform .15s ease, border-color .15s ease, background .15s ease;
+    }
+    .btn:hover{
+      transform: translateY(-1px);
+      border-color: rgba(125,211,252,.7);
+      background: rgba(15,23,42,.85);
+      text-decoration:none;
+    }
+
+    .hero{
+      background: linear-gradient(180deg, rgba(15,23,42,.85), rgba(15,23,42,.55));
+      border:1px solid var(--line);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding: 22px 22px;
+      margin-bottom: 18px;
+    }
+    .hero p{
+      margin:0;
+      color: var(--muted);
+      font-size: 15px;
+    }
+    .hero .headline{
+      margin: 0 0 10px 0;
+      font-size: 16px;
+      color: var(--text);
+      font-weight: 650;
+    }
+
+    .grid{
+      display:grid;
+      grid-template-columns: 1.25fr .75fr;
+      gap: 16px;
+      align-items:start;
+    }
+
+    @media (max-width: 880px){
+      .grid{ grid-template-columns: 1fr; }
+    }
+
+    .card{
+      background: rgba(15,23,42,.70);
+      border: 1px solid var(--line);
+      border-radius: var(--radius);
+      padding: 18px;
+      box-shadow: var(--shadow);
+    }
+    .card h2{
+      margin:0 0 10px 0;
+      font-size: 16px;
+      letter-spacing: .2px;
+    }
+
+    .projects{
+      display:grid;
+      grid-template-columns: 1fr;
+      gap: 12px;
+      margin-top: 10px;
+    }
+
+    .proj{
+      padding: 14px;
+      border-radius: 12px;
+      border: 1px solid rgba(31,42,68,.9);
+      background: rgba(2,6,23,.25);
+      transition: transform .15s ease, border-color .15s ease;
+    }
+    .proj:hover{
+      transform: translateY(-1px);
+      border-color: rgba(125,211,252,.55);
+    }
+    .proj .title{
+      display:flex;
+      align-items:baseline;
+      justify-content:space-between;
+      gap: 10px;
+      margin-bottom: 6px;
+      flex-wrap:wrap;
+    }
+    .proj .title strong{
+      font-size: 15px;
+      font-weight: 700;
+    }
+    .proj .meta{
+      color: var(--muted);
+      font-size: 12px;
+    }
+    .proj p{
+      margin: 0 0 10px 0;
+      color: var(--muted);
+      font-size: 13.5px;
+    }
+    .chips{
+      display:flex;
+      flex-wrap:wrap;
+      gap:8px;
+    }
+    .chip{
+      font-size: 12px;
+      color: var(--text);
+      background: rgba(18,27,51,.75);
+      border:1px solid rgba(31,42,68,.8);
+      padding: 6px 9px;
+      border-radius: 999px;
+    }
+
+    .twoCol{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+    }
+    @media (max-width: 520px){
+      .twoCol{ grid-template-columns: 1fr; }
+    }
+
+    .list{
+      margin: 10px 0 0 0;
+      padding:0;
+      list-style:none;
+      display:flex;
+      flex-direction:column;
+      gap:8px;
+    }
+    .list li{
+      display:flex;
+      justify-content:space-between;
+      gap:10px;
+      border:1px solid rgba(31,42,68,.75);
+      background: rgba(2,6,23,.22);
+      padding: 10px 12px;
+      border-radius: 12px;
+      color: var(--muted);
+      font-size: 13px;
+    }
+    .list li span{
+      color: var(--text);
+      font-weight: 600;
+    }
+
+    .footer{
+      margin-top: 16px;
+      color: var(--muted);
+      font-size: 12px;
+      text-align:center;
+      opacity:.9;
+    }
+
+    .note{
+      margin-top: 8px;
+      font-size: 12.5px;
+      color: var(--muted);
+    }
+  </style>
 </head>
 
 <body>
-<div class="container">
-    <h1>Anderson Liu</h1>
-    <div class="subtitle">
-        Optics & Photonics → Quantitative Finance
+  <div class="wrap">
+    <div class="topbar">
+      <div class="brand">
+        <div class="name">Anderson Liu</div>
+        <div class="tag">Optics & Photonics → Quantitative Finance • Pricing • Risk • Research Engineering</div>
+      </div>
+
+      <div class="nav">
+        <a class="btn" href="https://github.com/anderson930420" target="_blank" rel="noreferrer">GitHub</a>
+        <a class="btn" href="https://github.com/anderson930420/bs_pricer" target="_blank" rel="noreferrer">bs_pricer</a>
+        <!-- TODO: add your resume link once you upload it somewhere public -->
+        <!-- <a class="btn" href="YOUR_RESUME_LINK" target="_blank" rel="noreferrer">Resume</a> -->
+      </div>
     </div>
 
-    <div class="links">
-        <a href="https://github.com/anderson930420/bs_pricer" target="_blank">
-            Black-Scholes Engine
-        </a>
-        <a href="https://github.com/anderson930420" target="_blank">
-            GitHub
-        </a>
+    <div class="hero">
+      <div class="headline">Quant focus</div>
+      <p>
+        I build quantitative finance tools with an engineering mindset: clean interfaces, validation,
+        reproducible experiments, and careful edge-case handling. Current work emphasizes option pricing,
+        risk analytics, and portfolio P&amp;L plumbing.
+      </p>
+      <div class="note">
+        Tip: keep this page short. Recruiters skim; make projects clickable and verifiable.
+      </div>
     </div>
-</div>
+
+    <div class="grid">
+      <!-- LEFT: Projects -->
+      <div class="card">
+        <h2>Projects</h2>
+
+        <div class="projects">
+          <div class="proj">
+            <div class="title">
+              <strong>Black–Scholes Pricing Engine (bs_pricer)</strong>
+              <span class="meta">Python • tests • CLI • data model</span>
+            </div>
+            <p>
+              Option pricing + validation layer (domain checks &amp; deterministic limits), value surfaces,
+              and a growing portfolio/P&amp;L module. Designed for correctness first, then extensibility.
+            </p>
+            <div class="chips">
+              <span class="chip">Black–Scholes</span>
+              <span class="chip">Input validation</span>
+              <span class="chip">Surface grid</span>
+              <span class="chip">P&amp;L (FIFO lots)</span>
+              <span class="chip">pytest</span>
+            </div>
+            <div class="note">
+              Repo: <a href="https://github.com/anderson930420/bs_pricer" target="_blank" rel="noreferrer">github.com/anderson930420/bs_pricer</a>
+            </div>
+          </div>
+
+          <!-- Add more projects by copying this block -->
+          <div class="proj">
+            <div class="title">
+              <strong>Next project (placeholder)</strong>
+              <span class="meta">Coming soon</span>
+            </div>
+            <p>
+              Add your next quant build here (e.g., Monte Carlo pricer, volatility surface fitting,
+              backtesting framework, execution simulator).
+            </p>
+            <div class="chips">
+              <span class="chip">Monte Carlo</span>
+              <span class="chip">Vol surface</span>
+              <span class="chip">Backtesting</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- RIGHT: Skills / Focus / Contact -->
+      <div class="card">
+        <h2>Core stack</h2>
+
+        <div class="twoCol">
+          <ul class="list">
+            <li><span>Python</span> tooling, tests, data</li>
+            <li><span>Math</span> calc, prob, PDE intuition</li>
+            <li><span>Git</span> clean workflow</li>
+          </ul>
+          <ul class="list">
+            <li><span>MATLAB</span> numerical work</li>
+            <li><span>SQL</span> (learning/using)</li>
+            <li><span>C++</span> (ramping up)</li>
+          </ul>
+        </div>
+
+        <h2 style="margin-top:14px;">What I’m building next</h2>
+        <ul class="list">
+          <li><span>MC pricer</span> Greeks + variance reduction</li>
+          <li><span>Volatility</span> implied vol + smile</li>
+          <li><span>Backtest</span> clean metrics &amp; logs</li>
+        </ul>
+
+        <h2 style="margin-top:14px;">Links</h2>
+        <ul class="list">
+          <li><span>GitHub</span> <a href="https://github.com/anderson930420" target="_blank" rel="noreferrer">anderson930420</a></li>
+          <li><span>bs_pricer</span> <a href="https://github.com/anderson930420/bs_pricer" target="_blank" rel="noreferrer">repo</a></li>
+        </ul>
+
+        <div class="note">
+          If you want, I can tailor this to MFE admissions style (more narrative) or internship style (more deliverables).
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      © <span id="y"></span> Anderson Liu • Built with GitHub Pages
+    </div>
+  </div>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
